--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,12 +118,12 @@ jobs:
     steps:
       - test-linux:
           llvm: "14"
-  test-llvm14-go119:
+  test-llvm15-go119:
     docker:
-      - image: golang:1.19beta1-buster
+      - image: golang:1.19-buster
     steps:
       - test-linux:
-          llvm: "14"
+          llvm: "15"
           fmt-check: false
 
 workflows:
@@ -132,6 +132,6 @@ workflows:
       # This tests our lowest supported versions of Go and LLVM, to make sure at
       # least the smoke tests still pass.
       - test-llvm14-go118
-      # This tests a beta version of Go. It should be removed once regular
-      # release builds are built using this version.
-      - test-llvm14-go119
+      # This tests a newer version of Go and LLVM. It should be removed once
+      # regular release builds are built using these versions.
+      - test-llvm15-go119
