--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -108,7 +108,7 @@ jobs:
       - name: Install LLVM
         shell: bash
         run: |
-          HOMEBREW_NO_AUTO_UPDATE=1 brew install llvm@14
+          HOMEBREW_NO_AUTO_UPDATE=1 brew install llvm@14 # TODO: use LLVM 15
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install Go
@@ -117,6 +117,6 @@ jobs:
           go-version: '1.18'
           cache: true
       - name: Build TinyGo
-        run: go install
+        run: go install -tags=llvm14 # TODO: remove -tags=llvm14
       - name: Check binary
         run: tinygo version
